# reckless-vs-stockfish

./: Cargo.toml  TODO.md
src/: engine.rs  game.rs  main.rs
src/engine/: uci.rs
src/game/: result.rs  runner.rs
